FIxing some overflow, chaning colors, etc.

--- a/3.E-commerce product page/assets/styles/main.css
+++ b/3.E-commerce product page/assets/styles/main.css
@@ -13,10 +13,10 @@ Variables
 
 :root {
   /* primary color */
-  --clr-primary-0: #f55d05;
-  --clr-primary-10: #f66d1e;
-  --clr-primary-30: #f88e50;
-  --clr-primary-40: #f99e69;
+  --clr-primary-0: #ff7d1b;
+  --clr-primary-10: #ff8a32;
+  --clr-primary-30: #ffa45f;
+  --clr-primary-80: #ffe5d1;
   /* other colors */
   --clr-black: #222;
   --clr-black-light: #919191;
@@ -42,7 +42,6 @@ body {
   color: var(--clr-black-light);
   line-height: 1.5;
   font-size: 0.875rem;
-  overflow: hidden;
 }
 ul {
   list-style-type: none;
@@ -108,6 +107,7 @@ p {
   gap: 0.75rem;
   color: var(--clr-white);
   font-weight: 700;
+  font-size: 1.2rem;
   padding: 0.75rem 1.5rem;
   background: var(--clr-primary-0);
   border: transparent;
@@ -217,6 +217,7 @@ SIDEBAR
 }
 .sidebar-link {
   margin-bottom: 1rem;
+  font-size: 1.5rem;
   font-weight: 700;
 }
 /*
@@ -225,7 +226,7 @@ HERO
 ===============
 */
 .hero {
-  min-height: calc(100vh - 5rem);
+  min-height: calc(100vh - 4rem);
   display: grid;
   place-items: center;
 }
@@ -236,9 +237,9 @@ HERO
 }
 .product-img-container {
   position: relative;
+  cursor: pointer;
 }
 .main-img {
-  position: relative;
   width: 100%;
 }
 .thumbnail-photos {
@@ -283,7 +284,7 @@ HERO
 }
 .hero-info h2 {
   margin-top: 1rem;
-  width: 25rem;
+  width: auto;
   color: var(--clr-black);
 }
 .hero-info p {
@@ -304,12 +305,12 @@ h3 {
   text-decoration: line-through;
 }
 .price span {
-  color: var(--clr-white);
+  color: var(--clr-primary-0);
   font-size: 1rem;
   font-weight: 700;
-  background: var(--clr-primary-40);
-  padding: 0.3rem 0.75rem;
-  border-radius: var(--border-radious);
+  background: var(--clr-primary-80);
+  padding: 0.1rem 0.75rem;
+  border-radius: 0.5rem;
 }
 .cart {
   display: grid;
@@ -326,9 +327,10 @@ h3 {
   color: var(--clr-black);
 }
 .btn-cart {
-  padding: 0.75rem 0;
+  padding: 0.5rem 0;
   box-shadow: var(--bs-dark);
 }
+
 @media screen and (min-width: 992px) {
   .nav {
     height: 10rem;
@@ -417,8 +419,5 @@ h3 {
   }
   .number-item h3 {
     font-size: 1.4rem;
-  }
-  .btn {
-    font-size: 1.25rem;
   }
 }
